[package]
name = "tomflash-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41.0", features = ["full"] }

# Database
diesel = { version = "2.2.4", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.5.1", features = ["postgres"] }

# API clients
reqwest = { version = "0.12.9", features = ["json"] }
twitter-v2 = "0.1.8"

# Ethereum
ethers = { version = "2.0.14", features = ["rustls"] }

# AI/Embeddings
async-openai = "0.25.0"

# Serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

# Error handling
thiserror = "1.0.66"
anyhow = "1.0.92"

# Utils
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
rand = "0.8.5"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.0"